@@ -4,6 +4,11 @@
 # $Id$
 
   11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
+  targets/support/chroot-functions.sh:
+  Apply patch to make stage2 quiet, thanks to Alexandre Nuno Milheiro
+  <nunomilheiro@gmail.com>, gentoo bug #273664
+
+  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
   targets/netboot/netboot-final.sh:
   Fix sparc bug, gentoo bug 297231
 
